[project]
name = "imagelibrary"
version = "0.1.0"
description = "A web-based 2D image reference database."
readme = "README.md"
authors = [{ name = "Flora", email = "Florare9822@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"

# Runtime dependencies
dependencies = [
  "flask>=3.0",
  "werkzeug>=3.0",
  "jinja2>=3.1",
  "click>=8.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]            
virtual = ".venv"    
pip-compile = true   

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
show_error_codes = true

[tool.pydocstyle]
convention = "google"
